# nanovllm-voxcpm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  example.py  manage.sh  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md  bench_closed_loop_users.py  bench_inference.py  bench_open_loop_users.py  bench_runtime_matrix.py
deployment/: Dockerfile  README.md  client.py
deployment/app/api/: deps.py
deployment/app/api/routes/: encode_latents.py  generate.py  info.py
deployment/app/core/: config.py  lifespan.py
deployment/app/schemas/: http.py
deployment/tests/: conftest.py  test_core_config.py  test_core_lifespan_lora.py  test_deployment_app.py  test_deployment_docs.py  test_dockerfile_defaults.py  test_routes_additional_coverage.py
docs/: README.md
docs/reference/: cudagraph-runtime.md  docker-deployment.md  http-api.md  runtime-baseline.md  runtime-benchmarking.md
docs/roadmap/: repo-alignment.md
docs/tasks/: README.md  runtime-performance-roadmap.md  voxcpm2-local-run.md
nanovllm_voxcpm/: config.py  llm.py
nanovllm_voxcpm/engine/: model_runner.py
nanovllm_voxcpm/layers/: attention.py  audio_vae_v2.py
nanovllm_voxcpm/models/: base_server.py  server_runtime.py
nanovllm_voxcpm/models/voxcpm/: runner.py  server.py
nanovllm_voxcpm/models/voxcpm2/: engine.py  model.py  runner.py  server.py
nanovllm_voxcpm/utils/: torch_numpy.py
scripts/: check-docs.sh
scripts/manage/: README.md  check.sh  common.sh  dev.sh  help.sh  main.sh  setup.sh
tests/unit/: test_attention_backend.py  test_attention_decode.py  test_base_model_server.py  test_config.py  test_server_runtime.py  test_torch_numpy.py  test_voxcpm2_chunk_sizes.py  test_voxcpm2_server_encode_latents.py
